Update heading and paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mon site</title>
 </head>
 <body>
-  <h1>Bienvenue sur mon site GitHub 🎉</h1>
-  <p>Mon premier site avec GitHub Pages.</p>
+  <h1>Welcome in ANANASMURF </h1>
+  <p>Hi</p>
 </body>
 </html>
