--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Welcome in ANANASMURF </h1>
   <p>Hi</p>
+  <img src="ananas.jpg" alt="Mon image">
 <button id="monBouton">Clique ici</button>
 <p id="message"></p>
 </body>
