Change button text to ask about pineapples

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Welcome in ANANASMURF </h1>
   <p>Hi</p>
-<button id="monBouton">Clique ici</button>
+<button id="monBouton">Do u like pineapples?</button>
 <p id="message"></p>
 <img src="ananas.jpg" alt="Mon image">
 </body>
