--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mon site</title>
+  <title>Ananasmurf</title>
 </head>
 <body>
   <h1>Welcome in ANANASMURF </h1>
