--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
   <script src="script.js"></script>
 <body>
-  <h1>Welcome in ANANASMURF </h1>
+  <h1>Welcome in ANANASMURF !!!</h1>
   <p>Hi</p>
 <button id="monBouton">Do u like pineapples?</button>
 <p id="message"></p>
