--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Ananasmurf</title>
-</head>
+  <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
+</head>
 <body>
   <h1>Welcome in ANANASMURF !!!</h1>
   <p>Hi</p>
