--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Welcome in ANANASMURF !!!</h1>
-  <p>Hi</p>
+  <p>Hi mighty pineapples</p>
 
   <button id="monBouton">Do u like pineapples?</button>
   <p id="message"></p>
