--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Welcome in ANANASMURF !!!</h1>
   <p>Hi mighty pineapples</p>
+  <p style="font-size: 60px;">Mon texte</p>
 
   <button id="monBouton">Do u like pineapples?</button>
   <p id="message"></p>
