--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
   <h1>Welcome in ANANASMURF !!!</h1>
-  <p>Hi mighty pineapples</p>
-  <p style="font-size: 60px;">Mon texte</p>
+  <p style="font-size: 40px;">Hi mighty pineapples</p>
 
   <button id="monBouton">Do u like pineapples?</button>
   <p id="message"></p>
