--- a/page.html
+++ b/page.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Mighty pineapples</title>
+</head>
+<body>
+  <h1>Hi there ! 🎉</h1>
+</body>
+</html>
