--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <h1>Welcome in ANANASMURF !!!</h1>
   <p style="font-size: 40px;">Hi mighty pineapples</p>
-
-  <button id="monBouton">Do u like pineapples?</button>
+  <p style="font-size: 40px;">Do u like pineapples?</p>
+  <button id="monBouton">Yes of course</button>
   <p id="message"></p>
   <img src="ananas.jpg" alt="Mon image">
 
