--- a/pageNo.html
+++ b/pageNo.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Get out from here</h1>
+</body>
+</html>
