--- a/page.html
+++ b/page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mighty pineapples</title>
+  <title>pineapples are good</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
