Add image to pageno.html

--- a/pageno.html
+++ b/pageno.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>Get out from here</h1>
+  <img src="images (2).jfif" alt="Mon image">
 </body>
 </html>
-#//images (2).jfif
+
+
+
