--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Ananasmurf</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://ananasmurf.github.io/ananasmurf.png" type="image/png">
+  <link rel="icon" href="ananas.jpg" type="image/jpg">
 </head>
 <body>
   <h1>Welcome in ANANASMURF !!!</h1>
