--- a/page.html
+++ b/page.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <h1>Hi there ! 🎉</h1>
+  <a href="https://www.youtube.com/watch?v=XXXX" target="_blank">
+  Regarder la vidéo 🎬
+</a>
 </body>
 </html>
