--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <h1>Welcome in ANANASMURF !!!</h1>
-  <p style="font-size: 40px;">Hi mighty pineapples</p>
-  <p style="font-size: 20px;">Do u like pineapples?</p>
+  <p style="font-size: 20px;">Do you like pineapples?</p>
   <button id="monBouton">Yes of course</button>
   <button id="monBouton2">No</button>
   <img src="ananas.jpg" alt="Mon image">
