--- a/page.html
+++ b/page.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Hi there ! 🎉</h1>
   <a href="https://www.youtube.com/@ANANASMURF" target="_blank">
-    Here
+    Here is my yt channel
 </a>
 </body>
 </html>
