--- a/page.html
+++ b/page.html
@@ -8,7 +8,11 @@
 <body>
   <h1>Hi there ! 🎉</h1>
   <a href="https://www.youtube.com/@ANANASMURF" target="_blank">
-    Here is my yt channel
+    Here is my yt channel. 
 </a>
+  <a href="https://discord.gg/eVe5QzDUvG" target="_blank">
+    Here is my discord server. 
+</a>
+  
 </body>
 </html>
