--- a/page.html
+++ b/page.html
@@ -8,10 +8,10 @@
 <body>
   <h1>Hi there ! 🎉</h1>
   <a href="https://www.youtube.com/@ANANASMURF" target="_blank">
-    Here is my yt channel. 
+  <button>Here is my YT channel.</button>
 </a>
   <a href="https://discord.gg/eVe5QzDUvG" target="_blank">
-    Here is my discord server. 
+    <button>Here is my discord server.<button> 
 </a>
   
 </body>
