--- a/page.html
+++ b/page.html
@@ -11,7 +11,7 @@
   <button>Here is my YT channel.</button>
 </a>
   <a href="https://discord.gg/eVe5QzDUvG" target="_blank">
-  <button>Here is my discord server.<button> 
+  <button>Here is my discord server.</button> 
 </a>
 </body>
 </html>
