--- a/page.html
+++ b/page.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>pineapples are good</title>
   <link rel="stylesheet" href="style.css">
+  <title>Ananasmurf</title>
+  <link rel="icon" href="ananas.jpg" type="image/jpg">
 </head>
 <body>
   <h1>Hi there ! 🎉</h1>
