--- a/pageno.html
+++ b/pageno.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-   <title> You are bad</title>
   <link rel="stylesheet" href="style.css">
+  <title>Ananasmurf</title>
+  <link rel="icon" href="images (2).jfif" type="image/jpg">
 </head>
 <body>
   <h1>Get out from here</h1>
