--- a/icedodo.html
+++ b/icedodo.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Ice Dodo🦤</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="ananas.jpg" type="image/jpg">
+</head>
+<body>
+  <h1>Welcome in ANANASMURF !!!</h1>
+  <script src="script.js"></script>
+</body>
+</html>
