--- a/indexb.html
+++ b/indexb.html
@@ -2,13 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Jeu clavier</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Jeu</title>
+  <link rel="stylesheet" href="styleb.css">
 </head>
 <body>
 
-  <h1>🎮 Attrape le carré</h1>
-  <p>Utilise les flèches du clavier</p>
+  <h1>🎮</h1>
+  <p>Use arrow</p>
 
   <div id="zone">
     <div id="player"></div>
@@ -17,6 +17,6 @@
 
   <p id="message"></p>
 
-  <script src="script.js"></script>
+  <script src="scriptb.js"></script>
 </body>
 </html>
