--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <button id="monBouton">Yes of course</button>
   <button id="monBouton2">No</button>
   <img src="ananas.jpg" alt="Mon image">
-
+  <button id="monBoutontest">GAME</button>
   <script src="script.js"></script>
 </body>
 </html>
