--- a/indexb.html
+++ b/indexb.html
@@ -15,7 +15,7 @@
     <div id="target"></div>
   </div>
 
-  <p id="message"></p>
+  <p id="messageg"></p>
 
   <script src="scriptb.js"></script>
 </body>
