--- a/pageno.html
+++ b/pageno.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
   <title>Ananasmurf</title>
-  <link rel="icon" href="images (2).jfif" type="image/jpg">
+  <link rel="icon" href="sensinterdit.jfif" type="image/jpg">
 </head>
 <body>
   <h1>Get out from here</h1>
-  <img src="images (2).jfif" alt="Mon image">
+  <img src="sensinterdit.jfif" alt="Mon image">
 </body>
 </html>
 
