--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <button id="monBouton2">No</button>
   <img src="ananas.jpg" alt="Mon image">
   <br>
-  <button id="monBoutontest">GAME</button>
+  <button id="monBoutontest">OTHER</button>
   <script src="script.js"></script>
 </body>
 </html>
