--- a/html/icedodo.html
+++ b/html/icedodo.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Ice Dodo🦤</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="ananas.jpg" type="image/jpg">
+  <link rel="icon" href="image/ananas.jpg" type="image/jpg">
 </head>
 <body>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
