--- a/html/index.html
+++ b/html/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <title>Ananasmurf</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="ananas.jpg" type="image/jpg">
+  <link rel="icon" href="images/ananas.jpg" type="image/jpg">
 </head>
 <body>
   <h1>Welcome in ANANASMURF !!!</h1>
   <p style="font-size: 20px;">Do you like pineapples?</p>
   <button id="monBouton">Yes of course</button>
   <button id="monBouton2">No</button>
-  <img src="ananas.jpg" alt="Mon image">
+  <img src="images/ananas.jpg" alt="Mon image">
   <br>
   <button id="monBoutontest">OTHER</button>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
