--- a/html/page.html
+++ b/html/page.html
@@ -5,7 +5,7 @@
   <title>pineapples are good</title>
   <link rel="stylesheet" href="style.css">
   <title>Ananasmurf</title>
-  <link rel="icon" href="ananas.jpg" type="image/jpg">
+  <link rel="icon" href="images/ananas.jpg" type="image/jpg">
 </head>
 <body>
   <h1>Hi there ! 🎉</h1>
