--- a/icedodo.html
+++ b/icedodo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Ice Dodo🦤</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="dodostyle.css">
   <link rel="icon" href="image/ananas.jpg" type="image/jpg">
 </head>
 <body>
