--- a/pageno.html
+++ b/pageno.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
   <title>Ananasmurf</title>
-  <link rel="icon" href="images/sensinterdit.jfif" type="image/jpg">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/sensinterdit.jfif" type="image/jfif">
 </head>
 <body>
   <h1>Get out from here</h1>
