--- a/icedodo.html
+++ b/icedodo.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="image/ananas.jpg" type="image/jpg">
 </head>
 <body>
+  <img src="images/ananas.jpg" alt="Ananas" class="logo">
   <script src="js/script.js"></script>
 </body>
 </html>
