--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <img src="images/ananas.jpg" alt="Mon image">
   <br>
   <button id="monBoutontest">OTHER</button>
+   <button id="monBoutonBacktomenu">Go Back to menu </button>
   <script src="js/script.js"></script>
 </body>
 </html>
