--- a/page.html
+++ b/page.html
@@ -14,7 +14,8 @@
 <br>
   <a href="https://discord.gg/eVe5QzDUvG" target="_blank">
   <button>Here is my discord server.</button> 
-  <button id="monBoutonBacktomenu">Go Back to menu </button>
 </a>
+  <button id="monBoutonBacktomenu">Go Back to menu </button>
+  <script src="js/script.js"></script>
 </body>
 </html>
