--- a/page.html
+++ b/page.html
@@ -16,7 +16,7 @@
   <button>Here is my discord server.</button> 
 </a>
   <br>
-  <button id="monBoutonBacktomenu">Go Back to menu </button>
+  <button id="monBoutonBacktomenu">🏠</button>
   <script src="js/script.js"></script>
 </body>
 </html>
