--- a/icedodo.html
+++ b/icedodo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Ice Dodo🦤</title>
   <link rel="stylesheet" href="dodostyle.css">
-  <link rel="icon" href="image/ananas.jpg" type="image/jpg">
+  <link rel="icon" href="images/images.png" type="image/png">
 </head>
 <body>
   <img src="images/ananas.jpg" alt="Ananas" class="logo">
