--- a/icedodo.html
+++ b/icedodo.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Ice Dodo🦤</title>
-  <link rel="stylesheet" href="dodostyle.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/images.png" type="image/png">
 </head>
-<body>
+<body2>
   <img src="images/ananas.jpg" alt="Ananas" class="logo">
   <button id="monBoutonBacktomenu">🏠</button>
   <script src="js/script.js"></script>
-</body>
+</body2>
 </html>
