--- a/icedodo.html
+++ b/icedodo.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/images.png" type="image/png">
 </head>
-<body2>
+<body>
   <img src="images/ananas.jpg" alt="Ananas" class="logo">
   <button id="monBoutonBacktomenu">🏠</button>
   <script src="js/script.js"></script>
-</body2>
+</body>
 </html>
