--- a/icedodo.html
+++ b/icedodo.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="images/images.png" type="image/png">
 </head>
 <body>
-  <img src="images/ananas.jpg" alt="Ananas" class="logo">
+  <button id="monBoutonBacktomenu"><img src="images/ananas.jpg" alt="Ananas" class="logo"></button>
   <button id="monBoutonBacktomenu">🏠</button>
   <script src="js/script.js"></script>
 </body>
