--- a/icedodo.html
+++ b/icedodo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <img src="images/ananas.jpg" alt="Ananas" class="logo">
-  <button id="monBoutonBacktomenu" style="font-size: 20px;>🏠</button>
+  <button id="monBoutonBacktomenu">🏠</button>
   <script src="js/script.js"></script>
 </body>
 </html>
