--- a/page.html
+++ b/page.html
@@ -17,7 +17,7 @@
 </a>
   <br>
   <button id="monBoutonBacktomenu">🏠</button>
-   <img src="images/ananas.jpg" alt="Ananas" class="logo">
+  <img src="images/ananas.jpg" alt="Ananas" class="logo" id=logoBtn>
   <script src="js/script.js"></script>
 </body>
 </html>
