--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="images/ananas.jpg" alt="Mon image">
   <br>
   <button id="monBoutontest">OTHER</button>
-  <img src="images/ananas.jpg" alt="Ananas" class="logo">
+  <img src="images/ananas.jpg" alt="Ananas" class="logo" id=logoBtn>
   <script src="js/script.js"></script>
 </body>
 </html>
