--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <button id="monBouton2">No</button>
   <img src="images/ananas.jpg" alt="Mon image">
   <br>
-  <button id="monBoutontest">OTHER</button>
+  <button id="monBoutontest">ICE DODO</button>
   <img src="images/ananas.jpg" alt="Ananas" class="logo" id=logoBtn>
   <script src="js/script.js"></script>
 </body>
