--- a/icedodo.html
+++ b/icedodo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <img src="images/ananas.jpg" alt="Ananas" class="logo" id=logoBtn>
-  <img src="images/skin.png" herf="image/png">
+  <img src="images/skin.png" alt="skin">
   <script src="js/script.js"></script>
 </body>
 </html>
