--- a/icedodo.html
+++ b/icedodo.html
@@ -125,7 +125,7 @@
   <br>
   <br>
   <br>
-  
+  <img src="images/ananas.jpg" alt="Ananas" class="logo" id=logoBtn>
   <script src="js/script.js"></script>
 </body>
 </html>
