Replace image source with new format

--- a/icedodo.html
+++ b/icedodo.html
@@ -126,7 +126,7 @@
   <br>
   <br>
   <img src="images/ananas.jpg" alt="Ananas" class="logo" id=logoBtn>
-  <img src="images/ananas.jpg" alt="Mon skin100%" class="bbbb">
+  <img src="images/100%.webp" alt="Mon skin100%" class="bbbb">
   <script src="js/script.js"></script>
 </body>
 </html>
