Fix HTML syntax for image tag in icedodo.html

--- a/icedodo.html
+++ b/icedodo.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="images/images.png" type="image/png">
 </head>
 <body>
-  <img src="images/ananas.jpg" alt="Ananas" class="logo" id=logoBtn>
+ <img src="images/ananas.jpg" alt="Ananas" class="logo" id="logoBtn">
   <script src="js/script.js"></script>
 </body>
 </html>
