Fix HTML syntax for logo image tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button id="monBoutontest">ICE DODO</button>
   <img src="images/ananas.jpg" alt="Mon image">
   <br>
-  <img src="images/ananas.jpg" alt="Ananas" class="logo" id=logoBtn>
+  <img src="images/ananas.jpg" alt="Ananas" class="logo" id="logoBtn">
   <script src="js/script.js"></script>
 </body>
 </html>
