--- a/page.html
+++ b/page.html
@@ -15,7 +15,7 @@
   <a href="https://discord.gg/eVe5QzDUvG" target="_blank">
   <button>Here is my discord server.</button> 
 </a>
-  <img src="images/ananas.jpg" alt="Ananas" class="logo" id=logoBtn>
+  <img src="images/ananas.jpg" alt="Ananas" class="logo" id="logoBtn">
   <script src="js/script.js"></script>
 </body>
 </html>
