--- a/icedodo.html
+++ b/icedodo.html
@@ -8,6 +8,7 @@
 </head>
 <body>
  <img src="images/ananas.jpg" alt="Ananas" class="logo" id="logoBtn">
+ <button id="icedodolink">Ice Dodo </button>
  <script src="js/script.js"></script>
 </body>
 </html>
