Replace button with link to Ice Dodo website

--- a/icedodo.html
+++ b/icedodo.html
@@ -8,7 +8,8 @@
 </head>
 <body>
  <img src="images/ananas.jpg" alt="Ananas" class="logo" id="logoBtn">
- <button id="icedodolink">Ice Dodo </button>
+ <a href= "https://icedodo.io/" target="_blank">
+  <button>Ice Dodo link </button> 
  <script src="js/script.js"></script>
 </body>
 </html>
